# fastapi-chat-service-nosql

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: bandit.yml
app/: config.py  main.py
chatApp/: main.py  sockets.py
chatApp/config/: auth.py  config.py  database.py  logs.py
chatApp/middlewares/: request_limit.py
chatApp/models/: message.py  private_room.py  public_room.py  room.py  user.py
chatApp/routes/: auth.py  chat.py  user.py
chatApp/schemas/: message.py  private_room.py  public_room.py  user.py
chatApp/utils/: hasher.py  object_id.py
jsTester/: index.html  scripts.js
nginx/: Dockerfile
nginx/configs/: chatApp.conf
tests/integration/: test_chat.py
tests/unit/: conftest.py
