[tool.poetry]
name = "fastapi-chat-service-nosql"
version = "0.1.0"
description = "this is a chat service implemented using Fast API Framework."
authors = ["sinasezza <s.e.sezza121@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.1"}
uvicorn = "^0.30.3"
python-socketio = "^5.11.3"
pymongo = "^4.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pre-commit = "^3.7.1"
ruff = "^0.5.4"
isort = "^5.13.2"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
