[tool.poetry]
name = "fastapi-chat-service-nosql"
version = "0.1.0"
description = "this is a chat service implemented using Fast API Framework."
authors = ["sinasezza <s.e.sezza121@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.isort]
line_length = 88
profile = "black"
remove_redundant_aliases = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.1"}
uvicorn = "^0.30.3"
python-socketio = {extras = ["asyncio"], version = "^5.11.3"}
pymongo = "^4.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pre-commit = "^3.7.1"
ruff = "^0.5.4"
isort = "^5.13.2"
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
motor = "^3.5.1"
mypy = "^1.11.0"
bcrypt = "^4.2.0"
python-json-logger = "^2.0.7"
motor-types = {extras = ["motor"], version = "^1.0.0b4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
